<resources>
    <string name="app_name">LifePulse</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="greeting">hello user</string>
    <string name="hbu">Como você esta hoje?</string>
    <string name="categories">Categorias</string>
    <string name="search">Pesquisar</string>
    <string name="consultations">Próximas Consultas</string>
    <string name="boxInput">Tire sua duvida</string>
    <string name="exampleSearch">Pesquisar: exemplo: Nutrição</string>
    <string name="drName">Dra. Maria Silva Camara</string>
    <string name="dayConsult">Consultas Próximas</string>
    <string name="scheduled">Consultas Marcadas</string>
    <string name="dayAndTime">Segunda-feira \n 16:00 Horas</string>
    <string name="speciality">Clínico Geral</string>
    <string name="yourConsults">Suas Consultas</string>
    <string name="noConsult">Dra Calvacante</string>
    <string name="setting">Configurarações</string>
    <string name="account">Conta</string>
    <string name="logout">Sair do aplicativo</string>
    <string name="changeAccount">Trocar Conta</string>
    <string name="cpf">CPF</string>
    <string name="birth">data de nascimento</string>
    <string name="email">e-mail</string>
    <string name="moonday">Segunda-feira \n Dia 10</string>
    <string name="goBack">Voltar para</string>
    <string name="hours">9:30</string>
    <string name="cancelBtn">Cancelar Consulta</string>
    <string name="place">Clínica Saude</string>
    <string name="horario">Terça-feira \n 10 </string>
    <string name="description">Observações que foram escritas constam aqui.</string>
</resources>
