<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/anti_fleshwhite"
    android:padding="16dp"
    tools:context=".User">

    <ImageView
        android:id="@+id/homeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24sp"
        android:src="@drawable/baseline_logout_24"
        />
    <ImageView
        android:layout_width="254sp"
        android:layout_height="254sp"
        android:src="@drawable/baseline_account_circle_24"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/cpf_input"
        android:layout_width="164sp"
        android:layout_height="48sp"
        android:layout_marginTop="24sp"
        android:background="@color/anti_fleshwhite"
        android:hint="@string/cpf" />

    <EditText
        android:layout_width="164sp"
        android:layout_height="48sp"
        android:layout_marginTop="24sp"
        android:background="@color/anti_fleshwhite"
        android:hint="@string/birth"
        />

    <EditText
        android:layout_width="164sp"
        android:layout_height="48sp"
        android:hint="@string/email"
        android:layout_marginTop="24sp"
        android:background="@color/anti_fleshwhite"
        />
</LinearLayout>
