<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Config">

    <!-- Top Blue Header -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:background="@color/polynesianBlue"
        android:layout_alignParentTop="true" />

    <!-- Greeting Text -->
    <TextView
        android:id="@+id/helloUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="21dp"
        android:hint="@string/greeting"
        android:padding="14dp"
        android:textColorHint="@color/anti_fleshwhite"
        android:textSize="24sp" />

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingTop="20dp"
        android:layout_marginTop="40sp"
        android:layout_below="@id/helloUser"
        android:layout_above="@+id/navbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/polynesianBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduled"
            android:textColor="@color/polynesianBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/polynesianBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/polynesianBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeAccount"
            android:textColor="@color/polynesianBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agendamentos"
            android:textColor="@color/polynesianBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <!-- Navbar at Bottom -->
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_home_24"
            android:backgroundTint="@color/white"
            android:background="?android:attr/selectableItemBackground" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_calendar_month_24"
            android:backgroundTint="@color/white"
            android:background="?android:attr/selectableItemBackground" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_add_circle_outline_24"
            android:backgroundTint="@color/white"
            android:background="?android:attr/selectableItemBackground" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_account_circle_24"
            android:backgroundTint="@color/white"
            android:background="?android:attr/selectableItemBackground" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_settings_24"
            android:backgroundTint="@color/white"
            android:background="?android:attr/selectableItemBackground" />
    </LinearLayout>

</RelativeLayout>
